# hyperlambda.github.io

./: .gitignore  CNAME  Gemfile  Makefile  archive.html  cabal.config  circle.yml  hyperlambda-github-io.cabal  index.html  rss.xml  site.hs
css/: default.css  default.scss  fonts.scss  main.css  main.css.map  main.scss
posts/: 2015-06-01-hello.md  2015-07-01-hello.md  2015-07-02-eventflow.md  2015-07-04-cqrs-es-in-haskell.md  2015-07-11-cqrs-es-in-scala.md  2015-08-23-eventflow-cqrs-es-in-scala.md  2015-08-25-eventflow-cqrs-es-in-scala.md  2015-10-11-hlist-map-in-scala.md  2015-10-16-eventflow-more-complex-example.md  2016-03-06-eventflow-even-more-succinct-now.md
posts/cqrs-es-in-haskell/: index.html
posts/cqrs-es-in-scala/: index.html
posts/eventflow-cqrs-es-in-scala/: index.html
posts/eventflow-just-got-even-prettier/: index.html
posts/eventflow-more-complex-example/: index.html
posts/hello/: index.html
posts/hlist-map-in-scala/: index.html
templates/: default.html  post-teaser.html  post.html
