name:               hyperlambda-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , pandoc >= 1.14.0.0
                  , filepath >= 1.3.0.2
                  , binary >= 0.7.1.0
                  , process >= 1.2.0.0
  ghc-options:      -threaded
  default-language: Haskell2010
